index problem solved

--- a/project 1/kaan.html
+++ b/project 1/kaan.html
@@ -55,7 +55,7 @@
   							<li class="dropdown active">
   							<a id="menumsu">Menu <i class="icon-angle-down"></i></a>
   							<ul class="dropdown-menu bold">
-  								<li><a href="main.html">Homepage</a></li>
+  								<li><a href="index.html">Homepage</a></li>
   								<li><a href="kaan.html">Kaan</a></li>
   								<li><a href="sedef.html">Sedef</a></li>
                   <li><a href="ipek.html">İpek</a></li>
