fixed some image problems + updated the credits

--- a/kaan.html
+++ b/kaan.html
@@ -19,7 +19,7 @@
           text-align: center;
           color:white;
           border: 2px dashed black;
-          background-color:#98FB98	;
+          background-color:#292929	;
         }
         h2{
           text-align: center;
@@ -74,24 +74,24 @@
         </div>
       </div>
         <div id="container">
-          <a  href="images\kaan\cruel.jpeg" data-lightbox="container" data-title="Cruel (2018)">
-              <img src="images\kaan\cruel.jpeg" class="img" >
+          <a  href="images\kaan\cruel.JPEG" data-lightbox="container" data-title="Cruel (2018)">
+              <img src="images\kaan\cruel.JPEG" class="img" >
           </a>
 
-          <a href="images\kaan\exhausted.jpeg" data-lightbox="container" data-title="Exhausted (2018)">
-            <img src="images\kaan\exhausted.jpeg" class="img">
+          <a href="images\kaan\exhausted.JPEG" data-lightbox="container" data-title="Exhausted (2018)">
+            <img src="images\kaan\exhausted.JPEG" class="img">
           </a>
 
-          <a href="images\kaan\parthaniel.jpeg" data-lightbox="container" data-title="Parthaniel (2018)">
-            <img src="images\kaan\parthaniel.jpeg" class="img">
+          <a href="images\kaan\parthaniel.JPEG" data-lightbox="container" data-title="Parthaniel (2018)">
+            <img src="images\kaan\parthaniel.JPEG" class="img">
           </a>
 
-          <a href="images\kaan\thunder.jpeg" data-lightbox="container" data-title="Thunder (2018)">
-            <img src="images\kaan\thunder.jpeg" class="img">
+          <a href="images\kaan\thunder.JPEG" data-lightbox="container" data-title="Thunder (2018)">
+            <img src="images\kaan\thunder.JPEG" class="img">
           </a>
 
-          <a href="images\kaan\tranquil.jpeg" data-lightbox="container" data-title="Tranquil (2018)">
-            <img src="images\kaan\tranquil.jpeg" class="img">
+          <a href="images\kaan\tranquil.JPEG" data-lightbox="container" data-title="Tranquil (2018)">
+            <img src="images\kaan\tranquil.JPEG" class="img">
           </a>
         </div>
     </body>
