--- a/sedef.html
+++ b/sedef.html
@@ -77,12 +77,12 @@
             <img src="images\sedef\cowboi.PNG" class="img" >
         </a>
 
-        <a href="images\sedef\girl.png" data-lightbox="container" data-title="The Girl (2017)">
-          <img src="images\sedef\girl.png" class="img">
+        <a href="images\sedef\girl.PNG" data-lightbox="container" data-title="The Girl (2017)">
+          <img src="images\sedef\girl.PNG" class="img">
         </a>
 
-        <a href="images\sedef\mermurder.png" data-lightbox="container" data-title="Murrrrmurder (2018)">
-          <img src="images\sedef\mermurder.png" class="img">
+        <a href="images\sedef\mermurder.PNG" data-lightbox="container" data-title="Murrrrmurder (2018)">
+          <img src="images\sedef\mermurder.PNG" class="img">
         </a>
 
         <a href="images\sedef\sweater.PNG" data-lightbox="container" data-title="Sweater Weather (2019)">
