--- a/ipek.html
+++ b/ipek.html
@@ -33,6 +33,9 @@
           background-image: url("images/ipekbg.jpg");
           background-repeat: repeat;
         }
+        img.img{
+          border:30px solid #EE82EE;
+        }
         </style>
     </head>
     <body>
