--- a/sedef.html
+++ b/sedef.html
@@ -33,8 +33,8 @@
         body{
           background-image:url("images/sedefbg.jpg");
         }
-        img{
-          border: 3px solid white;
+        img.img{
+          border: 30px solid #B22222;
         }
         p{
           color:black;
