--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="what the eye sees" startnode="19" creator="Twine" creator-version="2.1.3" ifid="ED20FEC3-458A-46B2-85D0-26AB74E06569" format="Harlowe" format-version="2.0.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-sidebar tw-icon.redo {
- display: none;
-}
-tw-sidebar tw-icon.undo {
- display: none;
-}
+<tw-storydata name="what the eye sees" startnode="19" creator="Twine" creator-version="2.1.3" ifid="ED20FEC3-458A-46B2-85D0-26AB74E06569" format="Harlowe" format-version="2.0.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+
+
+
 
 
 
@@ -68,6 +66,11 @@ tw-sidebar tw-icon.undo {
 
 
 
+
+
+
+
+
 </script><tw-passagedata pid="1" name="Beginning" tags="" position="221,402">&quot;So, what do you have here for me today?&quot; Her eyes glitter with excitement again, typical of Cansu. Her soft smile turns snarky, her eyes squinting slightly. You brush her off. &quot;The typical&quot;.
 
 [[Ask her about her day]]
@@ -93,23 +96,24 @@ The room is covered in plants in many shapes and colours, a [[vine]] hanging laz
 
 You can hear the faint sound of the music coming from the [[TV]] in the corner, filling the background with sounds- mostly ignored, partially heard.
 
-Cansu is waiting for you expectantly.
-[[Right, the cup -&gt;Just hand over the cup]]
-[[How was your day?-&gt;Ask her about her day]]</tw-passagedata><tw-passagedata pid="5" name="Cansu" tags="" position="2,186">You have known her for quite a long time, haven&#x27;t you? How does the time pass! You can&#x27;t quite recall the first time you saw her, but it hardly matters. You are here now, with her. Her light brown hair falls on her shoulders messily, her hairband barely containing her wild hair. Her eyes, always gentle and loving, stares at you now, waiting for your answer.
+Cansu is waiting for you expectantly. You can ask about her day and postpone the elephant in the room, or just hand over your cup to befriend the elephant.
+
+[[How was your day?-&gt;Ask her about her day]]
+[[Right, the cup -&gt;Just hand over the cup]]</tw-passagedata><tw-passagedata pid="5" name="Cansu" tags="" position="2,186">You have known her for quite a long time, haven&#x27;t you? How does the time pass! You can&#x27;t quite recall the first time you saw her, but it hardly matters. You are here now, with her. Her light brown hair falls on her shoulders messily, her hairband barely containing her wild hair. Her eyes, always gentle and loving, stares at you now, waiting for your answer.
 
 How wonderful she makes you feel! And how tranquil you feel in this room where nothing but the serene sun touches you. Just you and her. Her summer dress ends on her knees, revealing subtle scars: little scars resembling the night sky where you two would venture on adventures.
 
 She is sipping her tea. Her lipstick leaves vague trails behind, like a reminder of her existence. &quot;I was here-&quot;, the mark screams on the porcelain, &quot;I was here!&quot;.
 
-[[Snap out of it-&gt;Look at the room]]</tw-passagedata><tw-passagedata pid="6" name="Zerdeçal" tags="" position="33,51">Your favorite cat!- which doesn&#x27;t mean a lot. You are not a cat person, you never were. But you grew fond of this one. You watch him go on his business whenever you visit: he walks around the pots with elegance and a certain dignity, as if he has always owned the place. He sleeps wherever, whenever. Typical cat business. He reminds you of your chidhood dog, your hotblooded friend, always looking out the window, wishing for the sun, the seaside, the roads filled with people. Your eyes glide to windows- there is always sunlight coming in, the late afternoon sun washing over the dark green plain sofa, worn down by the years. The sunrays penetrating the tulle curtains invite you to the balcony, and you think you saw more plants and a couple of chairs to relax on in the balcony-
+[[Snap out of it-&gt;Look at the room]]</tw-passagedata><tw-passagedata pid="6" name="Zerdeçal" tags="" position="33,51">Your favorite cat!- which doesn&#x27;t mean a lot. You are not a cat person, you never were. But you grew fond of this one. You watch him go on his business whenever you visit: he walks around the pots with elegance and a certain dignity, as if he has always owned the place. He sleeps wherever, whenever. Typical cat business. He reminds you of your childhood dog, your hot-blooded friend, always looking out the window, wishing for the sun, the seaside, the roads filled with people. Your eyes glide to windows- there is always sunlight coming in, the late afternoon sun washing over the dark green plain sofa, worn down by the years. The sunrays penetrating the tulle curtains invite you to the balcony, and you think you saw more plants and a couple of chairs to relax on in the balcony-
 
-[[Snap out of it-&gt;Look at the room]]</tw-passagedata><tw-passagedata pid="7" name="vine" tags="" position="164,16">When did she start to cover the house in plants? You can not really recall. It doesn&#x27;t matter. The lovely fragnance of the room is intoxitacing. You can see how the humid hangs in the air, swirling and dancing like a small ballerina. You remember the rusty yellow skies and the iron pillar that reached high and high, till you find yourself in a-
+[[Snap out of it-&gt;Look at the room]]</tw-passagedata><tw-passagedata pid="7" name="vine" tags="" position="164,16">When did she start to cover the house in plants? You can&#x27;t really recall. It doesn&#x27;t matter. The lovely fragrance of the room is intoxicating. You can see how the humid hangs in the air, swirling and dancing like a small ballerina. You remember the rusty yellow skies and the iron pillar that reached high and high, till you find yourself in a-
 
-[[Snap out of it-&gt;Look at the room]]</tw-passagedata><tw-passagedata pid="8" name="TV" tags="" position="304,25">The CRT TV, unloved and uncared for. It always sits on the corner, broadcasting a song competition. The music hangs in the air and the melody feels familiar- do you remember it? What was her name, that singer whose silk-like hair coming down to her waist? Always adorned with flowers, her smile worth thousands... But you can not recall. Maybe it is better this way.
+[[Snap out of it-&gt;Look at the room]]</tw-passagedata><tw-passagedata pid="8" name="TV" tags="" position="304,25">The CRT TV, unloved and uncared for. It always sits on the corner, broadcasting a song competition. The music hangs in the air and the melody feels familiar- do you remember it? What was her name, that singer whose silk-like hair coming down to her waist? Always adorned with flowers, her smile worth thousands... But you can&#x27;t recall. Maybe it is better this way.
 
 You wonder who is going to win this season? Which season are they even on now?
 
-[[Irrevelant-&gt;Look at the room]]</tw-passagedata><tw-passagedata pid="9" name="Denial1" tags="" position="393,414">She shruggs. &quot;Why not? You didn&#x27;t ask this question when I read your story last time,&quot; she leans over closer, &quot;Just take it&quot;.
+[[Irrelevant-&gt;Look at the room]]</tw-passagedata><tw-passagedata pid="9" name="Denial1" tags="" position="393,414">She shruggs. &quot;Why not? You didn&#x27;t ask this question when I read your story last time,&quot; she leans over closer, &quot;Just take it&quot;.
 
 Maybe pleading for time won&#x27;t help, a lingering whispers drags your body heavier into the couch.
 
@@ -147,17 +151,17 @@ alley: you can go to the bar with cansu or meet her there
    *going there with her: you can try to get her out of a problem you got into / you can go along with it, getting buried deeper
    
    **snap out of itler daha hectic hale gelebilir (daha sonra?)
-   **write a small poem to explain coffee fortune telling zamazingo</tw-passagedata><tw-passagedata pid="15" name="alley-a1" tags="" position="896,335">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="16" name="alley-a2" tags="" position="969,60">&quot;I am waiting for you. My hands are tight around my bag straps. But I am not afraid. I am sitting on a barely-standing wooden cast and patiently waiting for you. I swear I can smell something rotting. My stomach turns and begs me to leave but- I am waiting. I know you will be here soon&quot;.
+   **write a small poem to explain coffee fortune telling zamazingo</tw-passagedata><tw-passagedata pid="15" name="alley-a1" tags="" position="896,335">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="16" name="alley-a2" tags="" position="969,60">&quot;I am waiting for you. My hands are tight around my bag straps. But I am not afraid. I am sitting on a barely-standing wooden box and patiently waiting for you. I swear I can smell something rotting. My stomach turns and begs me to leave but- I am waiting. I know you will be here soon&quot;.
 
-Are you still sure you feel grounded? And since when are your hands slightly covered with Zerdeçal&#x27;s fur. You look down. Here lies Zerdeçal, calm, purring on your lap and shedding fur as usual, just for your slightly sweaty hands to catch it. You wipe your hands to the couch. Cansu clears her throat.
+Are you still sure you feel grounded? And since when are your hands slightly covered with Zerdeçal&#x27;s fur. You look down. Here lies Zerdeçal, calm, purring on your lap and shedding fur as usual, just for your slightly sweaty hands to catch it. You wipe your hands to the couch. The fur is stubborn. You wipe again. Cansu clears her throat.
 
 &quot;But do I come?&quot;
 
 [[Yes. You are in a long summer dress. The lights are dim but I can see glitter on your cheeks-&gt;alley-a2.1]]
 
-[[Yes. You are in a long summer dress. Your make-up is smudged and your knees are bloody-&gt;alley-a2.2]]</tw-passagedata><tw-passagedata pid="17" name="alley-a2.1" tags="" position="1208,59">&quot;You shine and I smile at you. You take my hand and take me deeper into the valley.&quot; You smile as you feel a tug in your chest- a subtle melancholy dressed as memory. You turn your head towards her shelves: &quot;Do you remember this,&quot; you point at a wine glass. It has a faint print on it, an octopus holding a drink with all of its tentacles. The glass is empty, capturing the late afternoon lights and returning them coyly. &quot;We stole it that day. In the bar with million lights&quot;.
+[[Yes. You are in a long summer dress. Your make-up is smudged and your knees are bloody-&gt;alley-a2.2]]</tw-passagedata><tw-passagedata pid="17" name="alley-a2.1" tags="" position="1208,59">&quot;You shine and I smile at you. You take my hand and take me deeper into the valley.&quot; You smile as you feel a tug in your chest- a subtle melancholy dressed as memory. You turn your head towards her shelves: &quot;Do you remember this,&quot; you point at a wine glass. It has a faint print on it, an octopus holding a drink with all of its tentacles. The glass is empty, capturing the late afternoon lights and returning them coyly. &quot;We stole it that day. [[In the bar with million lights]]&quot;.
 
-You close your eyes for a sec and feel the flashing blue, red, green lights behind your eyelids again. People breathing and shouting over the music- the humid getting denser with every step. You find yourself in a maze made out of bars, intervined. The lines blurr between their territories and blend into a single entity. The vines hanging over the overlooking balcony tickle your sweaty face as you elbow your way in the crowd. Her hand tugs yours, squezing it in a silent code of reassurance.
+ Her hand tugs yours, squezing it in a silent code of reassurance.
 
 Cansu snaps you out of it all. &quot;So you see the bar in the cup? What next?&quot;</tw-passagedata><tw-passagedata pid="18" name="alley-a2.2" tags="" position="1178,258">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="19" name="Epigraph" tags="" position="178,549">And here we are, holding the coffee cups
 Pretending to read the future inside the lines
@@ -185,7 +189,7 @@ And I find myself longing for something
 &quot;I want to tell you [[this story-&gt;Beginning]] without having to confess anything&quot;
 -Richard Siken
 
-(Current Update: 18.09.2020)</tw-passagedata></tw-storydata>
+(Current Update: 18.09.2020)</tw-passagedata><tw-passagedata pid="20" name="In the bar with million lights" tags="" position="1713,81">You close your eyes for a sec and feel the flashing blue, red, green lights behind your eyelids again. [[People]] breathing and shouting over the music- the humid getting denser with every step. You find yourself in a maze made out of bars, [[intervined]]. The lines blurr between their territories and blend into a single entity. The [[vines]] hanging over the overlooking balcony tickle your sweaty face as you elbow your way in the crowd. The dense smell of alcohol turns your [[stomach]]. A sudden uprising of panic treatens to conquer your body.</tw-passagedata><tw-passagedata pid="21" name="People" tags="" position="1892,14">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="22" name="intervined" tags="" position="1493,160">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="vines" tags="" position="1838,238">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="24" name="stomach" tags="" position="1688,246">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
