--- a/twinegame.html
+++ b/twinegame.html
@@ -271,7 +271,7 @@ priorities:
 *develop their dynamic
 *develop MC+ Cansu (for yourself mostly)</tw-passagedata><tw-passagedata pid="32" name="&quot;good&quot; ending" tags="" position="703,1271" size="100,100">they wake up in their own room. description of that room
 + ending poem
-&quot;be in it&quot;</tw-passagedata><tw-passagedata pid="33" name="dance" tags="" position="1947,521.6666666666666" size="100,100">She drags you away to another bar. As she walks through the crowd in her usual excited energy, you feel as if you are going against a stream. The scent of people lingers around your nostrils, begging to be let in -but your attention is fixed on Cansu&#39;s hand in yours. The warmth radiating out of her is enough to suffocate you. Wouldn&#39;t you want to drown, like Ophelia, as she let herself go between the spring flowers? 
+&quot;be in it&quot;</tw-passagedata><tw-passagedata pid="33" name="dance" tags="" position="1947,521" size="100,100">She drags you away to another bar. As she walks through the crowd in her usual excited energy, you feel as if you are going against a stream. The scent of people lingers around your nostrils, begging to be let in -but your attention is fixed on Cansu&#39;s hand in yours. The warmth radiating out of her is enough to suffocate you. Wouldn&#39;t you want to drown, like Ophelia, as she let herself go between the spring flowers? 
 
 She stops at the center of the dancefloor- apparently there is also a club in this never-ending maze. Before you can adjust yourself to the new lights, the bodies around you start to envelop yours. Just like the waves, you start to feel your individuality fading away, as the air gets heavier with people breathing, singing, screaming, sweating, dancing, and crashing into one another. You feel a girl elbowing you, another&#39;s body pushing yours as she tries to walk past, and then another body- you lose count. The lights fill your pupils, and you can only see an overwhelming, awful blue strangling you. Flashes of red threaten to give you a migraine once again, like daggers piercing the soft darkness and slashing your flesh without a warning. The smoke- why is it here again? Did Cansu burn the potatoes again, or is the smell coming from her-
 
@@ -345,7 +345,7 @@ Doesn&#39;t matter. You probably will. One day.
 &quot;So, what do you have here for me today?&quot; Her eyes glitter with excitement again, typical of Cansu. Her soft smile turns snarky, her eyes squinting slightly. You brush her off. &quot;The typical&quot;, your eyes distracted by the colorful room.
 
 
-[[***AGOROPHOBIA ENDING**-&gt;closing]]*</tw-passagedata><tw-passagedata pid="41" name="closing" tags="" position="2100,1036" size="100,100">Do you see the point of us staying here
+[[AGOROPHOBIA ENDING-&gt;closing]]</tw-passagedata><tw-passagedata pid="41" name="closing" tags="" position="2100,1036" size="100,100">Do you see the point of us staying here
 As if nothing ever happens to us?
 The desire to close ourselves into this room
 And make up stories- wouldn&#39;t that be nice?
